# reddit-commentor-ml

./: .env.example  .gitignore  Modelfile  Modelfile_F16  Modelfile_Q8  pyproject.toml
scripts/: export_gguf.py  ingest.py  prepare_data.py  test_posts.py  train.py
src/reddit_ml/db/: client.py
src/reddit_ml/db/queries/: comments.py  posts.py
src/reddit_ml/processing/: cleaning.py  formatting.py
